--- a/proyecto1/login.html
+++ b/proyecto1/login.html
@@ -112,7 +112,7 @@
         
         <label for="carrera">Carrera</label>
         <select name="carrera" id="carrera">
-            <option value="Albañil">Albañil</option>
+            <option value="Albanil">Albañil</option>
             <option value="Leñador">Leñador</option>
             <option value="Pintor">Pintor</option>
         </select><br>
