--- a/proyecto1/login.html
+++ b/proyecto1/login.html
@@ -113,7 +113,7 @@
         <label for="carrera">Carrera</label>
         <select name="carrera" id="carrera">
             <option value="Albanil">Albañil</option>
-            <option value="Leñador">Leñador</option>
+            <option value="Lenador">Leñador</option>
             <option value="Pintor">Pintor</option>
         </select><br>
         <label for="Descripcion">Descripcion</label>
