--- a/querylocal.html
+++ b/querylocal.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 <body>
     <h1>Hola {{name}} tienes {{edad}} años</h1>
+    <li >
+
+    </li>
 </body>
 </html>
